# linear-objc

./: .gitignore  .gitmodules  Linear.podspec  LinearWithSSL.podspec  Makefile.am  README.md  bootstrap  build-universal.sh  configure.ac
doc/: Makefile
include/: LinearAddrInfo.h  LinearAuthContext.h  LinearClient.h  LinearError.h  LinearLog.h  LinearMessage.h  LinearSSLClient.h  LinearSSLContext.h  LinearSSLSocket.h  LinearSocket.h  LinearTCPClient.h  LinearTCPSocket.h  LinearWSClient.h  LinearWSContext.h  LinearWSSClient.h  LinearWSSSocket.h  LinearWSSocket.h  LinearX509Certificate.h  Makefile.am
patches/: any.h.ios.patch  any_test.cpp.ios.patch  msgpack_variant.hpp.ios.patch  nil.h.ios.patch  nil.hpp.ios.patch  optional.h.ios.patch  optional_test.cpp.ios.patch
src/: LinearAddrInfo.m  LinearAuthContext.m  LinearClient.mm  LinearError.m  LinearLog.mm  LinearMessage.m  LinearSSLClient.mm  LinearSSLContext.m  LinearSSLSocket.mm  LinearSocket.mm  LinearTCPClient.mm  LinearTCPSocket.mm  LinearTypeConverter.mm  LinearWSClient.mm  LinearWSContext.m  LinearWSSClient.mm  LinearWSSSocket.mm  LinearWSSocket.mm  LinearX509Certificate.m  Makefile.am
